--- a/main_eda.ipynb
+++ b/main_eda.ipynb
@@ -651,7 +651,17 @@
     "    plt.text(i, max(dataset_pct, usa_2023_pct) + 3, delta_text, ha='center', va='bottom', color='black')\n",
     "\n",
     "plt.legend(loc='upper right')\n",
-    "plt.show()\n"
+    "plt.show()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"finish\")"
    ]
   }
  ],
