Trying to fix CITL

--- a/eda/eda-koby.ipynb
+++ b/eda/eda-koby.ipynb
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1849,7 +1849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1858,7 +1858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -2063,7 +2063,7 @@
        "[5 rows x 186 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2109,7 +2109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -2127,7 +2127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -2151,7 +2151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -2175,16 +2175,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x28274bfd0>"
+       "<matplotlib.legend.Legend at 0x2c748b290>"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2200,11 +2200,11 @@
     }
    ],
    "source": [
-    "death_by_gender = data_no_apache_df[['age', 'gender', 'hospital_death']].rename({'hospital_death': 'Mortality', 'gender': 'Gender'}, axis=1)\n",
-    "death_by_gender.dropna()\n",
+    "gender_age_mortality = data_no_apache_df[['age', 'gender', 'hospital_death']].rename({'hospital_death': 'Mortality', 'gender': 'Gender'}, axis=1)\n",
+    "gender_age_mortality.dropna()\n",
     "\n",
-    "death_by_gender['Mortality'].replace({0: 'Survival', 1: 'Death'}, inplace=True)\n",
-    "death_by_gender['Gender'].replace({'M': 'Male', 'F': 'Female'}, inplace=True)\n",
+    "gender_age_mortality['Mortality'].replace({0: 'Survival', 1: 'Death'}, inplace=True)\n",
+    "gender_age_mortality['Gender'].replace({'M': 'Male', 'F': 'Female'}, inplace=True)\n",
     "\n",
     "# Assuming your dataframe is called `df`\n",
     "sns.set_theme(style='darkgrid')\n",
@@ -2216,7 +2216,7 @@
     "    showmeans=True,  # Display mean as point on the violins\n",
     "    hue=\"Mortality\",\n",
     "    split=True,  # Create separate violins for each gender\n",
-    "    data=death_by_gender,  # Combine dataframes for plotting\n",
+    "    data=gender_age_mortality,  # Combine dataframes for plotting\n",
     ")\n",
     "\n",
     "# Customize plot (optional)\n",
@@ -2227,14 +2227,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "death_by_gender = data_no_apache_df[['gender', 'hospital_death']]\n",
+    "death_by_gender = death_by_gender.groupby('gender')['hospital_death'].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "gender\n",
+       "F    8.837253\n",
+       "M    8.441650\n",
+       "Name: hospital_death, dtype: float64"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "death_by_gender * 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>age</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>gender</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>F</th>\n",
+       "      <td>62.774530</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>M</th>\n",
+       "      <td>61.926808</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Other/Unknown</th>\n",
+       "      <td>45.461538</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     age\n",
+       "gender                  \n",
+       "F              62.774530\n",
+       "M              61.926808\n",
+       "Other/Unknown  45.461538"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gender_and_age = data_no_apache_df[['gender', 'age']]\n",
+    "gender_and_age.loc[gender_and_age['gender'].isna(), 'gender'] = 'Other/Unknown'\n",
+    "gender_average_age = gender_and_age.groupby('gender').mean()\n",
+    "gender_average_age"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/m7/g2p4ht5n18x83ks3g6mbtjg40000gn/T/ipykernel_20124/1957673809.py:2: SettingWithCopyWarning: \n",
+      "/var/folders/m7/g2p4ht5n18x83ks3g6mbtjg40000gn/T/ipykernel_57198/1957673809.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -2266,16 +2369,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x2865a6550>"
+       "<matplotlib.legend.Legend at 0x2b312d9d0>"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2291,13 +2394,12 @@
     }
    ],
    "source": [
-    "death_by_ethnicity = data_no_apache_df[['age', 'ethnicity', 'hospital_death']].rename({'hospital_death': 'Mortality'}, axis=1)\n",
-    "death_by_ethnicity[death_by_ethnicity.isna()]['ethnicity'] = 'Other/Unknown'\n",
-    "death_by_ethnicity.dropna(inplace=True)\n",
+    "ethnicity_age_mortality = data_no_apache_df[['age', 'ethnicity', 'hospital_death']].rename({'hospital_death': 'Mortality'}, axis=1)\n",
+    "ethnicity_age_mortality[ethnicity_age_mortality.isna()]['ethnicity'] = 'Other/Unknown'\n",
+    "ethnicity_age_mortality.dropna(inplace=True)\n",
     "\n",
-    "death_by_ethnicity['Mortality'].replace({0: 'Survival', 1: 'Death'}, inplace=True)\n",
+    "ethnicity_age_mortality['Mortality'].replace({0: 'Survival', 1: 'Death'}, inplace=True)\n",
     "\n",
-    "# Assuming your dataframe is called `df`\n",
     "sns.set_theme(style='darkgrid')\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(12, 6))\n",
@@ -2309,7 +2411,7 @@
     "    showmeans=True,  # Display mean as point on the violins\n",
     "    hue=\"Mortality\",\n",
     "    split=True,  # Create separate violins for each gender\n",
-    "    data=death_by_ethnicity,  # Combine dataframes for plotting\n",
+    "    data=ethnicity_age_mortality,  # Combine dataframes for plotting\n",
     "    ax=ax\n",
     ")\n",
     "\n",
@@ -2322,20 +2424,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>age</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ethnicity</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>African American</th>\n",
+       "      <td>56.412342</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Asian</th>\n",
+       "      <td>61.238356</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Caucasian</th>\n",
+       "      <td>63.589468</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Hispanic</th>\n",
+       "      <td>61.623740</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Native American</th>\n",
+       "      <td>51.792258</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Other/Unknown</th>\n",
+       "      <td>58.809055</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                        age\n",
+       "ethnicity                  \n",
+       "African American  56.412342\n",
+       "Asian             61.238356\n",
+       "Caucasian         63.589468\n",
+       "Hispanic          61.623740\n",
+       "Native American   51.792258\n",
+       "Other/Unknown     58.809055"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ethnicity_and_age = data_no_apache_df[['ethnicity', 'age']]\n",
+    "ethnicity_and_age.loc[ethnicity_and_age['ethnicity'].isna(), 'ethnicity'] = 'Other/Unknown'\n",
+    "ethnicity_average_age = ethnicity_and_age.groupby('ethnicity').mean()\n",
+    "ethnicity_average_age"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/m7/g2p4ht5n18x83ks3g6mbtjg40000gn/T/ipykernel_45976/406718660.py:2: SettingWithCopyWarning: \n",
+      "/var/folders/m7/g2p4ht5n18x83ks3g6mbtjg40000gn/T/ipykernel_57198/136886127.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  death_by_ethnicity[death_by_ethnicity.isna()] = 'Other/Unknown'\n",
-      "/var/folders/m7/g2p4ht5n18x83ks3g6mbtjg40000gn/T/ipykernel_45976/406718660.py:2: SettingWithCopyWarning: \n",
+      "/var/folders/m7/g2p4ht5n18x83ks3g6mbtjg40000gn/T/ipykernel_57198/136886127.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -2381,7 +2568,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ethnicity\n",
+       "African American    7.855871\n",
+       "Asian               8.237378\n",
+       "Caucasian           8.726162\n",
+       "Hispanic            9.905163\n",
+       "Native American     8.883249\n",
+       "Other/Unknown       7.938984\n",
+       "Name: hospital_death, dtype: float64"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "death_by_ethnicity * 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -2405,7 +2619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
